Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9351

'lfs setstripe' failed to set composite layout to an existing file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.10.0
    • Lustre 2.10.0
    • 3
    • 9223372036854775807

      exclusive open is mistakenly used for 'lfs setstripe' for a composite layout, so that if one uses mknod to create a file, it won't be able to use 'lfs setstripe' to create layout to this existing file.

            niu Niu Yawei (Inactive)
            niu Niu Yawei (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: